# uglylogger

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml  tox-ci.ini  tox.ini
.github/workflows/: publish.yml  test.yml
src/uglylogger/: __init__.py  logbase.py  logger.py
tests/: test_logbase.py  test_logger.py  test_main.py
