[build-system]
requires = ["setuptools>=69.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uglylogger" # Required
version = "0.7.0" # Required
description = "An ugly, slow Logger class for python" # Optional
readme = "README.md" # Optional
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
  "python",
  "python3",
  "log",
  "logger",
  "oop",
  "pretty",
  "ugly",
] # Optional
authors = [
  { name = "Sevket Sureyya Caba", email = "sevketcaba@gmail.com" }, # Optional
]
maintainers = [
  { name = "Sevket Sureyya Caba", email = "sevketcaba@gmail.com" }, # Optional
]
classifiers = [ # Optional
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [ # Optional
  "parameterized",
]
[project.optional-dependencies] # Optional
dev = ["black", "flake8", "flake8-docstrings", "mypy"]
test = ["pytest", "pytest-cov"]

[project.urls] # Optional
"Homepage" = "https://github.com/sevketcaba/uglylogger"
"Bug Reports" = "https://github.com/sevketcaba/uglylogger/issues"
"Source" = "https://github.com/sevketcaba/uglylogger/"

[project.scripts] # Optional

[tool.setuptools]

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"
